<resources>
    <string name="app_name">Menuu3</string>

    <string
        name="hello_world"
        textSize="5dp"
        >Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="icon_medical">&#xf2a2;</string>
    <string name="icon_hopital">&#xf492;</string>
    <string name="icon_cart">&#xf203;</string>
    <string name="icon_list">&#xf471;</string>
    <string name="icon_points">&#xf3d1;</string>
    <string name="icon_garde">&#xf468;</string>
    <string name="icon_normal">&#xf3b0;</string>
    <string name="icon_adresse">&#xf2e9;</string>
    <string name="icon_distance">&#xf264;</string>
    <string name="icon_Horloge">&#xf3b3;</string>
    <string name="title_activity_maps">Map</string>




</resources>
