<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.00002">


            <TextView
                android:layout_width="40dp"
                android:layout_height="90dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/icon_normal"
                android:id="@+id/garde_normal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:textColor="#de6c6c6c"
                android:textSize="30sp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_alignBottom="@+id/r2" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/r2"
                android:layout_toRightOf="@+id/garde_normal"
                android:layout_toEndOf="@+id/garde_normal"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Medium Text"
                        android:id="@+id/name"
                        android:layout_alignParentTop="true"
                        android:textColor="#ff1d9c00"
                        android:textSize="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Adresse"
                        android:id="@+id/adress"
                        android:textColor="#de6c6c6c"
                        android:layout_below="@+id/name"

                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="18dp"
                        android:textSize="13dp"/>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_gravity="left|bottom"
                    android:id="@+id/distla">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/icon_distance"
                        android:id="@+id/distance_icon"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#de6c6c6c"
                        android:textSize="13sp"
                        android:gravity="center_vertical|center|center_horizontal"
                        android:layout_alignBottom="@+id/distance" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Dist"
                        android:id="@+id/distance"
                        android:textColor="#de6c6c6c"
                        android:textSize="13sp"
                        android:layout_toEndOf="@+id/distance_icon"
                        android:layout_toRightOf="@+id/distance_icon"
                        android:gravity="bottom|center_vertical|center|center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/icon_Horloge"
                        android:id="@+id/timing_icon"
                        android:textColor="#de6c6c6c"
                        android:textSize="13sp"
                        android:layout_toEndOf="@+id/distance"
                        android:layout_toRightOf="@+id/distance"
                        android:layout_alignBottom="@+id/distance"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical|center|center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="timing"
                        android:id="@+id/timing"
                        android:textColor="#de6c6c6c"
                        android:textSize="13sp"
                        android:layout_marginLeft="5dp"
                        android:layout_alignBottom="@+id/distance"
                        android:layout_toEndOf="@+id/timing_icon"
                        android:layout_toRightOf="@+id/timing_icon"
                        android:gravity="bottom|center_vertical|center|center_horizontal" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="22dp"
            android:layout_height="match_parent"
            android:layout_gravity="top|left|bottom|center_vertical|right"
            android:gravity="center_vertical|center_horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/icon_points"
                android:id="@+id/fleche"
                android:textColor="#de6c6c6c"
                android:textSize="13sp"
                android:gravity="center_vertical|center" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>