<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".MainActivity"
    android:weightSum="1"
    android:id="@+id/relative1"
    >

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/map"
    tools:context="tab.androiddev.com.menuu3.MapsActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:padding="0dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff1b0648"
        >

        <Button

            android:text="@string/icon_medical"
            android:textSize="32dp"
            android:id="@+id/button1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="#de6c6c6c"
            android:background="#E5E5E5"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center" />


        <Button

            android:text="@string/icon_hopital"
            android:textSize="32dp"
            android:id="@+id/button2"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="#de6c6c6c"
            android:background="#E5E5E5"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center" />

        <Button

            android:text="@string/icon_cart"
            android:textSize="32dp"
            android:id="@+id/button3"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="#de6c6c6c"
            android:background="#E5E5E5"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center" />

        <Button

            android:text="@string/icon_cart"
            android:textSize="32dp"
            android:id="@+id/button4"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="#de6c6c6c"
            android:background="#E5E5E5"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center" />


    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDuration"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="hhh"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDistance"
        android:layout_below="@+id/tvDuration"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="dd"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="btnFindPath"
        android:id="@+id/btnFindPath"
        android:layout_below="@+id/tvDistance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button6"
        android:layout_below="@+id/tvDistance"
        android:layout_toRightOf="@+id/btnFindPath"
        android:layout_toEndOf="@+id/btnFindPath" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOrigin"
        android:layout_below="@+id/btnFindPath"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDestination"
        android:layout_below="@+id/etOrigin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
